[gd_scene load_steps=6 format=2]

[ext_resource path="res://bg/03.png" type="Texture" id=1]
[ext_resource path="res://FinalJefe/Perdida.gd" type="Script" id=2]
[ext_resource path="res://fonts/eEraDua.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="03" type="Sprite" parent="."]
scale = Vector2( 3.41333, 2 )
texture = ExtResource( 1 )
centered = false

[node name="Dialogo" type="Label" parent="."]
margin_left = 335.0
margin_top = 268.0
margin_right = 711.0
margin_bottom = 404.0
custom_fonts/font = SubResource( 1 )
text = "PERDISTE"
autowrap = true

[node name="tiempoDialogo" type="Timer" parent="."]

[node name="btnContinuar" type="Button" parent="."]
anchor_right = 1.0
margin_left = 808.0
margin_top = 32.0
margin_right = 977.0
margin_bottom = 69.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "CONTINUAR"
flat = true

[connection signal="pressed" from="btnContinuar" to="." method="_on_Button_pressed"]
